correcting the margin-left to display appropriately on smaller devices

--- a/inst/climex_app/css/climex.css
+++ b/inst/climex_app/css/climex.css
@@ -347,6 +347,9 @@ tfoot {
     #inputInitialLocation {
 	margin-left: 4% !important;
     }
+    .scianimator .controls, .scianimator .control {
+	margin: 0 0 0 10% !important;
+    }
 }
 
 @media screen and (max-width: 1080px){
